[pytest]
testpaths = deep_genome/core/tests
env = 
    PYTHONHASHSEED=0
addopts = 
	--basetemp=last_test_runs
	--cov-config=.coveragerc
	#-n auto  #TODO need separate DG database per process for concurrency to work again. Also need separate ogs job dirs (each test already has a separate cache, so local job server is fine)

[metadata]
description-file = README.rst

